--- a/app/views/admincell.scala.html
+++ b/app/views/admincell.scala.html
@@ -1,5 +1,5 @@
+@(message: String)
 @main_dashboard("TAMS" ) {
-
     @views.html.navigation()
 
     <div class="content-wrapper py-3">
@@ -11,9 +11,20 @@
                         <div class="col-md-12"><br>
 
                             <h1 class="text-success">REGISTER RWANDA CELL</h1>
+<form class="col-sm-offset-2" action="@routes.AdminDashboard.DashboardCreateCell()" autocomplete="off" id="cellform" id="RegisterAdmin-form" method="POST" >
 
+                            @if(message == "error") {
+                                <div class="alert alert-danger col-md-8 offset-1" role="alert">
+                                @flash.get("error")
+                                </div>
 
-                            <form class="col-sm-offset-2" action="/dashboard/cell/create" autocomplete="off" id="cellform" id="RegisterAdmin-form" method="POST" >
+                            }
+                            @if(message=="success"){
+
+                                <div class="alert alert-success col-md-8 offset-1" role="alert">
+                                @flash.get("success")
+                                </div>
+                            }
 
                                 <div class="form-group row  ">
                                     <div class="col-sm-10">
@@ -29,11 +40,11 @@
                                 <div class="form-group row  ">
                                     <div class="col-sm-10">
                                         <input
-                                        name="cellform"
+                                        name="cell"
                                         id="cell"
                                         class="form-control"
                                         type="text"
-                                        placeholder="Enter cell name">
+                                        placeholder="Enter cell name"/>
                                     </div>
                                 </div>
 
@@ -44,7 +55,7 @@
                                         id="description"
                                         class="form-control"
                                         type="text"
-                                        placeholder="Enter district description">
+                                        placeholder="Enter district description"/>
                                     </div>
                                 </div>
 
