--- a/app/views/admindistrict.scala.html
+++ b/app/views/admindistrict.scala.html
@@ -1,5 +1,5 @@
+@(message: String)
 @main_dashboard("TAMS" ) {
-
     @views.html.navigation()
 
     <div class="content-wrapper py-3">
@@ -13,10 +13,19 @@
                             <h1 class="text-success">REGISTER RWANDA DISTRICT</h1>
 
 
-                            <form class="col-sm-offset-2" action="/dashboard/district/create" id="RegisterAdmin-form" method="POST" >
+                            <form class="col-sm-offset-2" action="/dashboard/district/create"  method="POST" id="districtform" >
+                                @if(message == "error") {
+                                    <div class="alert alert-danger col-md-8 offset-1" role="alert">
+                                        @flash.get("error")
+                                    </div>
 
+                                }
+                                @if(message=="success"){
 
-
+                                    <div class="alert alert-success col-md-8 offset-1" role="alert">
+                                            @flash.get("success")
+                                    </div>
+                                }
                                 <div class="form-group row  ">
                                     <div class="col-sm-10">
                                         <select  name="province" class="form-control">
