--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -51,9 +51,9 @@
                                 <div class="col-sm-6">
 
                                     <div class="footer-info">
-                                        <h3>TAN MIS</h3>
+                                        <h3>TAMS</h3>
                                         <p>Telecom Agent
-                                            Network Management Information System is a system designed to group all Rwanda Telecom companies agents together according to their locations and help everyone who needs to join their team to join it easyly via this system</p>
+                                             Management System is a system designed to group all Rwanda Telecom companies agents together according to their locations and help everyone who needs to join their team to join it easyly via this system</p>
                                     </div>
 
 
@@ -63,10 +63,9 @@
                                     <div class="footer-links">
                                         <h4>Useful Links</h4>
                                         <ul>
-                                            <li><a href="#">Home</a></li>
-                                            <li><a href="#">About us</a></li>
-                                            <li><a href="#">Services</a></li>
-
+                                            <li><a href="/.#intro">Home</a></li>
+                                            <li><a href="/.#about">About us</a></li>
+                                            <li><a href="/.#services">Services</a></li>
                                         </ul>
                                     </div>
 
@@ -106,7 +105,7 @@
 
             <div class="container">
                 <div class="copyright">
-                            &copy; Copyright <strong>TAN MIS</strong>. All Rights Reserved
+                            &copy; Copyright <strong>TAMS</strong>. All Rights Reserved
                 </div>
                 <div class="credits">
                         <!--
@@ -136,7 +135,13 @@
         <script src="@routes.Assets.at("javascripts/owlcarousel/owl.carousel.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/isotope/isotope.pkgd.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/lightbox/js/lightbox.min.js")"></script>
-            <!-- Contact Form JavaScript File -->
+
+       <script src="@routes.Assets.at("stylesheets/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.validate.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/validation.js")"type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/validation.js")"></script>
+
+    <!-- Contact Form JavaScript File -->
         <script src="@routes.Assets.at("javascripts/contactform.js")"></script>
 
             <!-- Template Main Javascript File -->
