--- a/app/views/signin_agent.scala.html
+++ b/app/views/signin_agent.scala.html
@@ -12,7 +12,7 @@
 
                     @if(message == "error") {
                         <div class="alert alert-danger col-md-8 offset-1" role="alert">
-                        @flash.get("error")
+                        @Html(flash.get("error"))
                         </div>
 
                     }
