--- a/app/views/navigation.scala.html
+++ b/app/views/navigation.scala.html
@@ -4,62 +4,65 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand " href="">Telecommunication Agents Management System</a>
+    <a class="navbar-brand " href="">Welcome</a>
     <div class="collapse navbar-collapse" id="navbarExample">
         <ul class="sidebar-nav navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/dashboard"><i class=""></i>Admin Dashboard</a>
-            </li>
+            @if(session.get("agentlog")){
 
-            <li class="nav-item">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse"
-                href="#collapseComponents"><i class="fa fa-fw fa-cogs"></i> System settings</a>
-                <ul class="sidebar-second-level collapse" id="collapseComponents">
-                    <li>
-                        <a href="/dashboard/province ">Register Province</a>
-                    </li>
-                    <li>
-                        <a href="/dashboard/district">Register District</a>
-                    </li>
-                    <li>
-                        <a href="/dashboard/sector">Register Sector</a>
-                    </li>
+            }else {
 
-                    <li>
-                        <a href="/dashboard/cell">Register Cell</a>
-                    </li>
-                    <li>
-                        <a href="">Advanced settings</a>
-                    </li>
-                        <!--     <li>
-                            <a href="#">Custom Card Examples</a>
-                        </li> -->
-                </ul>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/dashboard"><i class=""></i>Admin Dashboard</a>
+                </li>
 
-            <li class="nav-item">
-                <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti"  aria-expanded="false"><i class="fa fa-fw fa-lock"></i> Manage</a>
-                <ul class="sidebar-second-level collapse" id="collapseMulti">
-                    <li>
-                        <a href="/manage/driver">Handle applications</a>
-                    </li>
-                    <li>
-                        <a href="/service/driver">Active Agents</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse"
+                    href="#collapseComponents"><i class="fa fa-fw fa-cogs"></i> System settings</a>
+                    <ul class="sidebar-second-level collapse" id="collapseComponents">
+                        <li>
+                            <a href="/dashboard/province ">Register Province</a>
+                        </li>
+                        <li>
+                            <a href="/dashboard/district">Register District</a>
+                        </li>
+                        <li>
+                            <a href="/dashboard/sector">Register Sector</a>
+                        </li>
 
-                    <li>
-                        <a href="/manage/accounts ">Admin accounts</a>
-                    </li>
-                </ul>
-            </li>
+                        <li>
+                            <a href="/dashboard/cell">Register Cell</a>
+                        </li>
+                        <li>
+                            <a href="">Advanced settings</a>
+                        </li>
 
+                    </ul>
+                </li>
 
+                <li class="nav-item">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti" aria-expanded="false"><i class="fa fa-fw fa-lock"></i>
+                        Manage</a>
+                    <ul class="sidebar-second-level collapse" id="collapseMulti">
+                        <li>
+                            <a href="/manage/driver">Handle applications</a>
+                        </li>
+                        <li>
+                            <a href="/service/driver">Active Agents</a>
+                        </li>
+
+                        <li>
+                            <a href="/manage/accounts ">Admin accounts</a>
+                        </li>
+                    </ul>
+                </li>
+
+            }
 
         </ul>
         <ul class="navbar-nav ml-auto">
                 <!--  -->
             <li class="nav-item">
-                <a class="nav-link" href="/logout"><i class="fa fa-fw fa-sign-out"></i> Logout</a>
+                <a class="nav-link" href="/agent/logout"><i class="fa fa-fw fa-sign-out"></i>Logout</a>
             </li>
         </ul>
     </div>
