--- a/app/views/signin_signup_model.scala.html
+++ b/app/views/signin_signup_model.scala.html
@@ -20,7 +20,7 @@
                             <div class="modal-body">
 
                                 <div class="col-md-8 offset-3">
-                                    <button type="btn btn-lg" class="btn btn-primary"><a href="">SIGNIN</a></button>
+                                    <button type="btn btn-lg" class="btn btn-primary"><a href="/signin/agent ">SIGNIN</a></button>
                                     <button type="btn btn-lg" class="btn btn-warning"><a href="/signup/agent">SIGNUP</a></button>
                                 </div>
 
