--- a/app/views/application_agent.scala.html
+++ b/app/views/application_agent.scala.html
@@ -10,20 +10,20 @@
                     <div class="container">
                         <div class="col-md-10"><br>
 
-                    <form class=" mt-5" action="/dashboard/district/create"  method="POST" id="districtform" >
+                    <form class=" mt-5" action="/application/submit"  autocomplete="off" method="POST" id="applicationForm" enctype="multipart/form-data" >
 
                                 <h1 class="text-primary">For the complete application fill the following form </h1>
 
                                 @if(message == "error") {
                                     <div class="alert alert-danger col-md-8  offset-1" role="alert">
-                                    @flash.get("error")
+                                        @Html(flash.get("error"))
                                     </div>
 
                                 }
                                 @if(message=="success"){
 
                                     <div class="alert alert-success col-md-8 offset-1" role="alert">
-                                    @flash.get("success")
+                                        @Html(flash.get("success"))
                                     </div>
                                 }
                                 <div class="row">
