--- a/app/views/adminsector.scala.html
+++ b/app/views/adminsector.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 @main_dashboard("TAMS" ) {
 
-    @views.html.navigation()
+    @views.html.navigation("message")
 
     <div class="content-wrapper py-3">
         <div class="container-fluid">
