--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -1,6 +1,6 @@
 @main_dashboard("TAMS" ) {
 
-@views.html.navigation()
+@views.html.navigation("message")
 
     <div class="content-wrapper py-3">
          <div class="container-fluid">
