--- a/app/views/admincell.scala.html
+++ b/app/views/admincell.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 @main_dashboard("TAMS" ) {
-    @views.html.navigation()
+    @views.html.navigation("message")
 
     <div class="content-wrapper py-3">
         <div class="container-fluid">
