--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -9,9 +9,8 @@
 
 
 
-
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center   "><br>
-                    <h1 class="text-success"> Welcome</h1>
+            <div class=" col-md-12  "><br>
+                    <h2 class="text-primary center col-md-offset-2"> Welcome to Telecom Agent Management System admin dashboard</h2>
 
 
          </div>
