--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -66,6 +66,7 @@
                                             <li><a href="/.#intro">Home</a></li>
                                             <li><a href="/.#about">About us</a></li>
                                             <li><a href="/.#services">Services</a></li>
+                                            <li><a href="/admin/login">Private area</a></li>
                                         </ul>
                                     </div>
 
